--- a/rust_core/Cargo.toml
+++ b/rust_core/Cargo.toml
@@ -15,9 +15,21 @@ serde_json = "1.0"
 log = "0.4"
 thiserror = "2.0.12"
 env_logger = "0.11.8"
-tokio = {version = "1", features = ["full"] }
+tokio = { version = "1.0", features = ["full"] }
 futures = "0.3"
 parking_lot = "0.12"
 dashmap = "6.1.0"
 num_cpus = "1.13"
+
+[dev-dependencies]
+criterion = "0.5"
+rand = "0.8"
+
+[[bench]]
+name = "decode_benchmark"
+harness = false
+
+[build-dependencies]
+cc = "1.0"
+bindgen = "0.69"
 
