--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,15 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential cmake libpcap-dev
     
+    - name: Build C Capture
+      run: |
+        cd c_capture
+        mkdir -p build
+        cd build
+        cmake ..
+        make
+        sudo make install
+    
     - name: Build Rust Core
       run: |
         cd rust_core
@@ -32,14 +41,6 @@ jobs:
       run: |
         cd rust_core
         cargo test --verbose
-    
-    - name: Build C Capture
-      run: |
-        cd c_capture
-        mkdir -p build
-        cd build
-        cmake ..
-        make
     
     - name: Run C Tests
       run: |
